--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  "rapidsvn-0.12.0-1.tar.gz": b25820ee98517b2b070c9b5a3a18463607799081
+  rapidsvn-0.12.1.tar.gz: 65d051b5a84fe8b5b0ce906f2ba5cf134a560feb
+  rapidsvn_logo.png: d40f4233013483c079e532273010a14b0b1b375a
